--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vs/
 # Logs
 logs
 *.log
@@ -102,3 +103,9 @@ dist
 
 # TernJS port file
 .tern-port
+
+obj/
+bin/
+.config/
+*.user
+PublishProfiles/
