--- a/dotnet-jwt-login/appsettings.json
+++ b/dotnet-jwt-login/appsettings.json
@@ -1,7 +1,4 @@
 ﻿{
-  "AppSettings": {
-    "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AppSettings": {
+    "Secret": "SECRET TO SIGN AND VERIFY JWT TOKENS"
+  }
 }
