--- a/iisjwt/appsettings.json
+++ b/iisjwt/appsettings.json
@@ -10,8 +10,14 @@
   "JwtSettings": {
     "Issuer": "https://seecloud-iis.company.local",
     "Audience": "orion-chat-proxy",
-    "PrivateKeyPath": "C:\\Keys\\seecloud-jwt.pem",
-    "KeyId": "seecloud-1",
+    "ActiveKid": "2026-Q1",
+    "ActiveSigningThumbprint": "REPLACE_WITH_ACTIVE_THUMBPRINT",
+    "JwksCerts": [
+      {
+        "Thumbprint": "REPLACE_WITH_ACTIVE_THUMBPRINT",
+        "Kid": "2026-Q1"
+      }
+    ],
     "TokenLifetimeMinutes": 30
   },
   "CorsOrigins": [
