--- a/auth/web.config
+++ b/auth/web.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-  iisjwt/web.config
+  auth/web.config
   IIS deployment configuration for the Windows Auth JWT gateway.
 
   Requirements:
@@ -16,7 +16,7 @@
              modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
       <aspNetCore processPath="dotnet"
-                  arguments=".\iisjwt.dll"
+                  arguments=".\auth.dll"
                   stdoutLogEnabled="false"
                   stdoutLogFile=".\logs\stdout"
                   hostingModel="inprocess" />
