Added unique proxy for chat and embeddings

--- a/auth/appsettings.json
+++ b/auth/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "JwtSettings": {
     "Issuer": "https://seecloud-iis.company.local",
-    "Audience": "orion-chat-proxy",
+    "Audience": "orion-proxy",
     "ActiveKid": "2026-Q1",
     "ActiveSigningThumbprint": "REPLACE_WITH_ACTIVE_THUMBPRINT",
     "JwksCerts": [
